# vox

./: .gitignore  pyproject.toml
design/: ARCHITECTURE.md  CALIBRATION-LOOP.md  CLI-DESIGN.md  DATA-MODEL.md  EVALUATION.md  INTEGRATION.md  PHASES.md  PROMPTS.md  README.md
persona_forge/: __init__.py  config.py  main.py
persona_forge/calibrate/: evaluator.py  loop.py  questions.py
persona_forge/export/: renderer.py
persona_forge/llm/: __init__.py  anthropic.py  bedrock.py  ollama.py  parse.py  provider.py
persona_forge/persona/: model.py  store.py
persona_forge/prompts/: templates.py
persona_forge/seed/: generator.py  interview.py
persona_forge/ui/: display.py
tests/: conftest.py  test_calibration_integration.py  test_cli.py  test_evaluator.py  test_export.py  test_model.py  test_parse.py  test_provider.py  test_seed.py  test_smoke.py  test_store.py
