[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "persona-forge"
version = "0.1.0"
description = "Generate, calibrate, and export AI personas for use as system prompts in AI coding assistants"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
persona-forge = "persona_forge.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["persona_forge*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
